Photo and About Text Added

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@ body {
   background-color: darkolivegreen;
 }
 
+.about-text {
+  font-family: "Share Tech Mono";
+  text-align: justify;
+}
+
 .stm-font {
   font-family: "Share Tech Mono", monospace;
 }
