--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
   /* left: 10px; */
 }
 
-#portfolio li, #experiences li {
+#portfolio li, #experiences li, #others li {
   font-size: 1.2em;
 }
 
